F!! add API to handle Tags
