# src/main/java/ch/mav/schedario/controller/FileController.java
@@ -2,7 +2,9 @@ package ch.mav.schedario.controller;
 
 import ch.mav.schedario.api.V1Api;
 import ch.mav.schedario.api.model.FileDto;
+import ch.mav.schedario.api.model.TagDto;
 import ch.mav.schedario.mapper.FileMapper;
+import ch.mav.schedario.mapper.TagMapper;
 import ch.mav.schedario.service.FileService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.core.io.Resource;
@@ -19,6 +21,7 @@ public class FileController implements V1Api {
     private final FileService fileService;
 
     private final FileMapper fileMapper;
+    private final TagMapper tagMapper;
 
     @Override
     public ResponseEntity<List<FileDto>> getFiles() {
@@ -45,10 +48,37 @@ public class FileController implements V1Api {
         return fileService.getFile(fileId)
                 .map(file -> {
                     fileMapper.updateFile(file, fileDto);
-                    return file;
+                    fileService.updateFile(file);
+                    return ResponseEntity.ok().<Void>build();
                 })
-                .map(fileService::updateFile)
-                .map(f -> ResponseEntity.ok().<Void>build())
+                .orElse(ResponseEntity.notFound().build());
+    }
+
+    @Override
+    public ResponseEntity<List<TagDto>> getTagsForFile(final Long fileId) {
+        return fileService.getFile(fileId)
+                .map(f -> f.getTags().stream().map(tagMapper::toTagDto).toList())
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
+    }
+
+    @Override
+    public ResponseEntity<Void> addTagForFile(final Long fileId, final TagDto tagDto) {
+        return fileService.getFile(fileId)
+                .map(f -> {
+                    fileService.addTagForFile(f, tagMapper.toTag(tagDto));
+                    return ResponseEntity.ok().<Void>build();
+                })
+                .orElse(ResponseEntity.notFound().build());
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteTagFromFile(final Long fileId, final Long tagId) {
+        return fileService.getFile(fileId)
+                .map(f -> {
+                    fileService.deleteTagFromFile(f, tagId);
+                    return ResponseEntity.ok().<Void>build();
+                })
                 .orElse(ResponseEntity.notFound().build());
     }
 }
